tests/negative/gold/indent8_test.gold
tests/negative/indent8_test.toit:7:7: error: Unexpected delimiter
  func)
      ^
tests/negative/indent8_test.toit:7:3: error: Argument mismatch for 'func'
Block argument not provided
  func)
  ^~~~
tests/negative/indent8_test.toit:8:12: error: Unresolved identifier: 'unresolved'
  local := unresolved
           ^~~~~~~~~~
Compilation failed.
